--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
     <button id="trigger" title="Menu"></button>
   </header>
 	<main data-scroll-container>
-    <section data-scroll-section>
+    <section data-scroll-section data-scroll-target="slide" data-scroll-speed="0.3">
       <picture title="Developer’s name">
         <source srcset="img/slide-1.jpg" type="image/webp">
         <source srcset="img/slide-1.jpg" type="image/jpeg">
@@ -43,7 +43,7 @@
           <p>Архитектура и дизайн</p>
         </span>
 			</a>
-      <a id="js-target" class="item" data-img="img/1.jpg">
+      <a id="target-item" class="item" data-img="img/1.jpg">
         <img src="img/2.jpg">
 				<span class="item-text">
           <span class="item-textinner">Видеть прекрасное</span>
