--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
     <nav data-scroll-repeat class="items">
       <a data-scroll data-scroll-speed="0.3" class="item">
         <picture>
-          <source srcset="img/1.jpg" type="image/webp">
+          <source srcset="img/1.webp" type="image/webp">
           <source srcset="img/1.jpg" type="image/jpeg">
           <img src="img/1.jpg" alt="Img 1">
         </picture>
@@ -37,7 +37,7 @@
 			</a>
       <a data-scroll data-scroll-speed="0.8" class="item active">
         <picture title="Developer’s name">
-          <source srcset="img/slide-1.jpg" type="image/webp">
+          <source srcset="img/slide-1.webp" type="image/webp">
           <source srcset="img/slide-1.jpg" type="image/jpeg">
           <img src="img/slide-1.jpg" alt="Developer’s name">
         </picture>
@@ -48,7 +48,7 @@
 			</a>
       <a data-scroll data-scroll-speed="0.7" class="item">
         <picture>
-          <source srcset="img/3.jpg" type="image/webp">
+          <source srcset="img/3.webp" type="image/webp">
           <source srcset="img/3.jpg" type="image/jpeg">
           <img src="img/3.jpg" alt="Img 1">
         </picture>
@@ -59,7 +59,7 @@
 			</a>
       <a data-scroll data-scroll-speed="1" class="item">
         <picture>
-          <source srcset="img/4.jpg" type="image/webp">
+          <source srcset="img/4.webp" type="image/webp">
           <source srcset="img/4.jpg" type="image/jpeg">
           <img src="img/4.jpg" alt="Img 1">
         </picture>
@@ -70,7 +70,7 @@
 			</a>
       <a data-scroll data-scroll-speed="5" class="item">
         <picture>
-          <source srcset="img/5.jpg" type="image/webp">
+          <source srcset="img/5.webp" type="image/webp">
           <source srcset="img/5.jpg" type="image/jpeg">
           <img src="img/5.jpg" alt="Img 1">
         </picture>
